# Prescription-Automation

./: .gitignore  example_usage.py  main.py  pyproject.toml  ui.html
prescription_automation/: __init__.py
prescription_automation/api/: v1.py
prescription_automation/models/: __init__.py  model.py
prescription_automation/prompts/: __init__.py  extraction_prompt.py  extraction_prompt.txt
prescription_automation/schemas/: __init__.py  schema.py
prescription_automation/services/: __init__.py  extractor.py  llm_extractor.py  regex_extractor.py
prescription_automation/ui/: __init__.py  ui.py
prescription_automation/utils/: __init__.py  prompt_utils.py  transcript_utils.py
tests/: conftest.py  test_extractor.py
